--- a/search.html
+++ b/search.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">View All Students</a>
+                <a class="nav-link active" aria-current="page" href="viewallstudents.html">View All Students</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Add Student</a>
