--- a/search.html
+++ b/search.html
@@ -27,6 +27,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="search.html">Search Student</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="studentdelete.html">Delete Student</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="editstudent.html">Edit Student</a>
+              </li>
               
             </ul>
           </div>
